tests/snapshots/preauth_narrow__credentials.snap
---
source: tests/preauth_narrow.rs
assertion_line: 169
expression: state.credentials()
---
- id: "http://credibil.io/credentials/DeveloperCredential"
  issuer: "http://credibil.io"
  issuer_name: Credibil
  issued: "[issued]"
  type:
    - DeveloperCredential
    - VerifiableCredential
  format: jwt_vc_json
  claim_definitions:
    family_name:
      value_type: string
      display:
        - name: Family name
          locale: en-NZ
    given_name:
      value_type: string
      display:
        - name: Given name
          locale: en-NZ
    proficiency:
      mandatory: true
      value_type: number
      display:
        - name: Proficiency
          locale: en-NZ
  subject_claims:
    - claims:
        family_name: Person
        given_name: Normal
        proficiency: "3"
      id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
  issuance_date: "[issuance_date]"
  display:
    - name: Developer
      locale: en-NZ
      logo:
        uri: "https://credibil.io/assets/developer.png"
        alt_text: Developer Logo
      description: Credibil certified developer credential
      background_color: "#010100"
      background_image:
        uri: "https://credibil.io/assets/developer-background.png"
        alt_text: Developer Background
      text_color: "#ffffff"
